[project]
name = "fast-api-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "WuBener",email = "1045724847@qq.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pymupdf (>=1.26.0,<2.0.0)",
    "python-docx (>=1.1.2,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "dashscope (>=1.23.3,<2.0.0)",
    "cryptography (>=45.0.3,<46.0.0)",
    "aliyun-python-sdk-core (==2.15.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
